--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,15 @@ plugins {
 }
 
 group 'net.lim'
-version '0.01d'
+version '0.01e'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile group: 'org.telegram', name: 'telegrambots', version: '5.0.1.1'
-    implementation group: 'org.telegram', name: 'telegrambotsextensions', version: '5.0.1.1'
+    compile group: 'org.telegram', name: 'telegrambots', version: '5.3.0'
+    implementation group: 'org.telegram', name: 'telegrambotsextensions', version: '5.3.0'
     compile group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
     compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.33'
     compile group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '2.33'
