--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group 'net.lim'
-version '0.01h'
+version '0.01i'
 
 repositories {
     mavenCentral()
@@ -16,10 +16,11 @@ dependencies {
     compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.33'
     compile group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '2.33'
 
-
     compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.30'
 
     compile group: 'org.jsoup', name: 'jsoup', version: '1.13.1'
+
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
 
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
     testCompile group: 'junit', name: 'junit', version: '4.12'
