--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group 'net.lim'
-version '0.02h'
+version '0.02i'
 
 repositories {
     mavenCentral()
@@ -12,7 +12,7 @@ repositories {
 dependencies {
     compile group: 'org.telegram', name: 'telegrambots', version: '5.3.0'
     implementation group: 'org.telegram', name: 'telegrambotsextensions', version: '5.3.0'
-    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
     compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.33'
     compile group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '2.33'
 
@@ -22,6 +22,6 @@ dependencies {
 
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
 
-    annotationProcessor 'org.projectlombok:lombok:1.18.12'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
