--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,13 @@ mainClassName  = "net.lim.Application"
 executableDir = "build"
 
 group 'net.lim'
-version '0.02.0'
+version '0.02.1'
 
 repositories {
     mavenCentral()
 }
+
+sourceSets.main.java.srcDirs = ['src/main/java']
 
 jar {
     manifest {
